# tablescanner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  validate_deployment.sh
app/: __init__.py  config.py  config_constants.py  exceptions.py  main.py  models.py  routes.py
app/configs/: __init__.py  berdl_tables.json  fallback_registry.py  genome_data_tables.json
app/db/: __init__.py  schema.sql
app/services/: __init__.py  ai_provider.py  cache_service.py  config_generator.py  config_registry.py  db_helper.py  fingerprint.py  logger.py  minio_service.py  sqlite_service.py  type_inference.py  validation.py  viewer_client.py
app/services/ai/: __init__.py  ai_provider.py  prompts.py
app/services/config/: __init__.py  config_generator.py
app/utils/: __init__.py  async_utils.py  cache.py  download.py  request_utils.py  sqlite.py  workspace.py
docs/: API.md  API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIG_SYSTEM.md  CONTRIBUTING.md  DEVELOPMENT.md  QUICKSTART_DEMO.md  README.md  SERVICES.md  SUMMARY.md  TESTING.md  USAGE_GUIDE.md
docs/internal/: DEPLOYMENT_READINESS.md
scripts/: README.md  api_client.py  dev.sh  migrate_fallback_configs.py  run_e2e.sh  sync_developer_configs.py  test_deployment.sh  test_production_ready.py  verify_config_plane.py
static/: viewer.html
tests/: __init__.py  test_api_basic.py  test_config_control_plane.py  test_config_generation.py  test_integration.py  test_performance.py
tests/integration/: README.md  test_basic.sh  test_concurrency.py  test_deployment.py  test_docker_deployment.py  test_full.sh  test_local_upload.py  test_multi_database_routes.py  test_object_76990_Test2.sh  test_routes.py  test_routes_advanced.py  test_security.py  test_security_fixes.py  test_server.sh  verify_deployment.sh
tests/unit/: test_query_service.py
(+9 files in other folders)
