[project]
name = "tablescanner"
version = "1.0.0"
description = "TableScanner FastAPI Application"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "minio>=7.2.20",
    "orjson>=3.9.10",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "tqdm>=4.64.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
